force-app/main/default/objects/AccountGroup__c/AccountGroup__c.object-meta.xml
<CustomObject>
    <label>Account Group</label>
    <nameField>
        <displayFormat>AG-{0000}</displayFormat>
        <label>Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>