force-app/main/default/objects/AccountGroup__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Account Groups</relationshipLabel>
    <relationshipName>Account_Groups</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>